--- a/DjangoWebProjectPython/HelloDjangoApp/templates/HelloDjangoApp/index.html
+++ b/DjangoWebProjectPython/HelloDjangoApp/templates/HelloDjangoApp/index.html
@@ -1,10 +1,15 @@
 <html>
 <head>
-    <title>{{ title }}</title>
-    {% load static %} <!-- Instruct Django to load static files -->
-    <link rel="stylesheet" type="text/css" href="{% static 'site.css' %}" />
+   
+    {% extends "HelloDjangoApp/layout.html" %}
+    {% block content %}
+    <span class="message">{{ message }}</span>
+    {{ content }}
+    {% endblock %}
 </head>
 <body>
+    
+    <div><a href="about">About</a></div>
     <span class="message">{{ message }}</span>{{ content }}
 </body>
 </html>
